# jigai

./: .gitignore  HANDOFF.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: handoff.md
jigai/: __init__.py  cli.py  config.py  models.py
jigai/notifier/: __init__.py  macos.py
jigai/patterns/: defaults.yaml
jigai/server/: __init__.py  app.py  client.py  discovery.py  ws_manager.py
jigai/watcher/: __init__.py  detector.py  patterns.py  pty_proxy.py  watcher.py
tests/: test_config.py  test_detector.py  test_models.py  test_patterns.py  test_watcher_utils.py
