[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jigai"
version = "0.1.0"
description = "জিগাই — Tool-agnostic terminal notification system for AI coding agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Nafis Tiham", email = "nafistiham@gmail.com" }]
keywords = [
    "terminal", "notifications", "ai", "coding-agent",
    "claude-code", "codex", "gemini", "aider", "productivity",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Tools",
    "Topic :: Utilities",
]
dependencies = [
    "typer[all]>=0.9.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "zeroconf>=0.131.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/nafistiham/jigai"
Repository = "https://github.com/nafistiham/jigai"
Issues = "https://github.com/nafistiham/jigai/issues"
Changelog = "https://github.com/nafistiham/jigai/releases"

[project.scripts]
jigai = "jigai.cli:app"

[tool.setuptools.packages.find]
include = ["jigai*"]

[tool.setuptools.package-data]
"*" = ["patterns/*.yaml"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
